Project/Parser/Apr18/C57.output
Terminals which are not used

   STATIC
   STRUCT
   EXTERN
   NIL
   PRECMP
   ILLEGALID
   OTHER
   DIVEQ
   MULEQ
   MINUSEQ
   PLUSEQ
   DEREF
   ADDR
   DOT
   ARROW


State 191 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | func_declaration
    6            | func_prototype

    7 var_declaration: CONST type_specifier var_decl_list SEMICOLON
    8                | type_specifier CONST var_decl_list SEMICOLON
    9                | type_specifier var_decl_list SEMICOLON

   10 type_specifier: INT
   11               | DOUBLE

   12 var_decl_list: var_decl_list COMMA var_decl
   13              | var_decl

   14 var_decl: ID

   15 @1: /* empty */

   16 var_decl: ID @1 ASSIGN expression

   17 @2: /* empty */

   18 var_decl: ID @2 LSQRBRKT expression RSQRBRKT

   19 @3: /* empty */

   20 func_header: type_specifier ID @3 LBRKT formal_params RBRKT

   21 @4: /* empty */

   22 func_header: VOID ID @4 LBRKT formal_params RBRKT

   23 func_declaration: func_header compound_statement

   24 func_prototype: func_header SEMICOLON

   25 formal_params: formal_list
   26              | VOID
   27              | /* empty */

   28 formal_list: formal_list COMMA formal_param
   29            | formal_param

   30 formal_param: type_specifier ID
   31             | type_specifier ID LSQRBRKT RSQRBRKT

   32 compound_statement: LCLYBRKT local_declarations statement_list RCLYBRKT

   33 local_declarations: local_declarations var_declaration
   34                   | /* empty */

   35 statement_list: statement_list statement
   36               | /* empty */

   37 statement: expression_statement
   38          | compound_statement
   39          | if_statement
   40          | while_statement
   41          | do_while_statement
   42          | for_statement
   43          | return_statement
   44          | read_statement
   45          | print_statement
   46          | break_statement
   47          | continue_statement
   48          | switch_statement
   49          | case_statement
   50          | default_statement

   51 expression_statement: expression SEMICOLON
   52                     | SEMICOLON

   53 if_statement: IF LBRKT expression RBRKT statement
   54             | IF LBRKT expression RBRKT statement ELSE statement

   55 while_statement: WHILE LBRKT expression RBRKT statement

   56 do_while_statement: DO statement WHILE LBRKT expression RBRKT SEMICOLON

   57 for_statement: FOR for_header statement

   58 for_header: LBRKT for_header_expression SEMICOLON for_header_expression SEMICOLON for_header_expression RBRKT

   59 for_header_expression: expression
   60                      | /* empty */

   61 return_statement: RETURN SEMICOLON
   62                 | RETURN expression SEMICOLON

   63 read_statement: READ var SEMICOLON

   64 print_statement: PRINT expression SEMICOLON
   65                | PRINT STRING SEMICOLON

   66 expression: var ASSIGN expression
   67           | r_value

   68 var: ID

   69 @5: /* empty */

   70 var: ID @5 LSQRBRKT expression RSQRBRKT

   71 r_value: expression PLUS expression
   72        | expression MINUS expression
   73        | expression STAR expression
   74        | expression DIV expression
   75        | expression MOD expression
   76        | expression LESS expression
   77        | expression LESSEQ expression
   78        | expression GRTER expression
   79        | expression GRTEREQ expression
   80        | expression EQ expression
   81        | expression NEQ expression
   82        | expression AND expression
   83        | expression OR expression
   84        | NOT expression
   85        | MINUS expression
   86        | var
   87        | INC var
   88        | DEC var
   89        | var INC
   90        | var DEC
   91        | LBRKT expression RBRKT
   92        | call
   93        | NUM
   94        | FNUM
   95        | sizeof_expression

   96 @6: /* empty */

   97 call: ID @6 LBRKT args RBRKT

   98 args: arg_list
   99     | /* empty */

  100 arg_list: arg_list COMMA expression
  101         | expression

  102 break_statement: BREAK SEMICOLON

  103 continue_statement: CONTINUE SEMICOLON

  104 case_statement: CASE NUM COLON statement

  105 default_statement: DEFAULT COLON statement

  106 switch_statement: SWITCH LBRKT expression RBRKT statement

  107 sizeof_expression: SIZEOF LBRKT type_specifier RBRKT
  108                  | SIZEOF LBRKT expression RBRKT


Terminals, with rules where they appear

$end (0) 0
error (256)
ELSE (258) 54
IF (259) 53 54
INT (260) 10
RETURN (261) 61 62
VOID (262) 22 26
WHILE (263) 55 56
FOR (264) 57
DO (265) 56
DOUBLE (266) 11
BREAK (267) 102
CONTINUE (268) 103
CONST (269) 7 8
SWITCH (270) 106
STATIC (271)
STRUCT (272)
EXTERN (273)
DEFAULT (274) 105
CASE (275) 104
NIL (276)
READ (277) 63
PRINT (278) 64 65
SEMICOLON (279) 7 8 9 24 51 52 56 58 61 62 63 64 65 102 103
LBRKT (280) 20 22 53 54 55 56 58 91 97 106 107 108
RBRKT (281) 20 22 53 54 55 56 58 91 97 106 107 108
LSQRBRKT (282) 18 31 70
RSQRBRKT (283) 18 31 70
LCLYBRKT (284) 32
RCLYBRKT (285) 32
PRECMP (286)
COLON (287) 104 105
INC (288) 87 89
DEC (289) 88 90
ID (290) 14 16 18 20 22 30 31 68 70 97
NUM (291) 93 104
FNUM (292) 94
STRING (293) 65
ILLEGALID (294)
OTHER (295)
COMMA (296) 12 28 100
DIVEQ (297)
MULEQ (298)
MINUSEQ (299)
PLUSEQ (300)
ASSIGN (301) 16 66
OR (302) 83
AND (303) 82
NEQ (304) 81
EQ (305) 80
GRTEREQ (306) 79
GRTER (307) 78
LESSEQ (308) 77
LESS (309) 76
MINUS (310) 72 85
PLUS (311) 71
MOD (312) 75
DIV (313) 74
STAR (314) 73
SIZEOF (315) 107 108
DECPRE (316)
INCPRE (317)
NOT (318) 84
UMINUS (319)
DEREF (320)
ADDR (321)
DECPOST (322)
INCPOST (323)
DOT (324)
ARROW (325)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
program (72)
    on left: 1, on right: 0
declaration_list (73)
    on left: 2 3, on right: 1 2
declaration (74)
    on left: 4 5 6, on right: 2 3
var_declaration (75)
    on left: 7 8 9, on right: 4 33
type_specifier (76)
    on left: 10 11, on right: 7 8 9 20 30 31 107
var_decl_list (77)
    on left: 12 13, on right: 7 8 9 12
var_decl (78)
    on left: 14 16 18, on right: 12 13
@1 (79)
    on left: 15, on right: 16
@2 (80)
    on left: 17, on right: 18
func_header (81)
    on left: 20 22, on right: 23 24
@3 (82)
    on left: 19, on right: 20
@4 (83)
    on left: 21, on right: 22
func_declaration (84)
    on left: 23, on right: 5
func_prototype (85)
    on left: 24, on right: 6
formal_params (86)
    on left: 25 26 27, on right: 20 22
formal_list (87)
    on left: 28 29, on right: 25 28
formal_param (88)
    on left: 30 31, on right: 28 29
compound_statement (89)
    on left: 32, on right: 23 38
local_declarations (90)
    on left: 33 34, on right: 32 33
statement_list (91)
    on left: 35 36, on right: 32 35
statement (92)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50,
    on right: 35 53 54 55 56 57 104 105 106
expression_statement (93)
    on left: 51 52, on right: 37
if_statement (94)
    on left: 53 54, on right: 39
while_statement (95)
    on left: 55, on right: 40
do_while_statement (96)
    on left: 56, on right: 41
for_statement (97)
    on left: 57, on right: 42
for_header (98)
    on left: 58, on right: 57
for_header_expression (99)
    on left: 59 60, on right: 58
return_statement (100)
    on left: 61 62, on right: 43
read_statement (101)
    on left: 63, on right: 44
print_statement (102)
    on left: 64 65, on right: 45
expression (103)
    on left: 66 67, on right: 16 18 51 53 54 55 56 59 62 64 66 70 71
    72 73 74 75 76 77 78 79 80 81 82 83 84 85 91 100 101 106 108
var (104)
    on left: 68 70, on right: 63 66 86 87 88 89 90
@5 (105)
    on left: 69, on right: 70
r_value (106)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 93 94 95, on right: 67
call (107)
    on left: 97, on right: 92
@6 (108)
    on left: 96, on right: 97
args (109)
    on left: 98 99, on right: 97
arg_list (110)
    on left: 100 101, on right: 98 100
break_statement (111)
    on left: 102, on right: 46
continue_statement (112)
    on left: 103, on right: 47
case_statement (113)
    on left: 104, on right: 49
default_statement (114)
    on left: 105, on right: 50
switch_statement (115)
    on left: 106, on right: 48
sizeof_expression (116)
    on left: 107 108, on right: 95


state 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CONST   shift, and go to state 4

    program           go to state 5
    declaration_list  go to state 6
    declaration       go to state 7
    var_declaration   go to state 8
    type_specifier    go to state 9
    func_header       go to state 10
    func_declaration  go to state 11
    func_prototype    go to state 12


state 1

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


state 2

   22 func_header: VOID . ID @4 LBRKT formal_params RBRKT

    ID  shift, and go to state 13


state 3

   11 type_specifier: DOUBLE .

    $default  reduce using rule 11 (type_specifier)


state 4

    7 var_declaration: CONST . type_specifier var_decl_list SEMICOLON

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3

    type_specifier  go to state 14


state 5

    0 $accept: program . $end

    $end  shift, and go to state 15


state 6

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CONST   shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration       go to state 16
    var_declaration   go to state 8
    type_specifier    go to state 9
    func_header       go to state 10
    func_declaration  go to state 11
    func_prototype    go to state 12


state 7

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 8

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 9

    8 var_declaration: type_specifier . CONST var_decl_list SEMICOLON
    9                | type_specifier . var_decl_list SEMICOLON
   20 func_header: type_specifier . ID @3 LBRKT formal_params RBRKT

    CONST  shift, and go to state 17
    ID     shift, and go to state 18

    var_decl_list  go to state 19
    var_decl       go to state 20


state 10

   23 func_declaration: func_header . compound_statement
   24 func_prototype: func_header . SEMICOLON

    SEMICOLON  shift, and go to state 21
    LCLYBRKT   shift, and go to state 22

    compound_statement  go to state 23


state 11

    5 declaration: func_declaration .

    $default  reduce using rule 5 (declaration)


state 12

    6 declaration: func_prototype .

    $default  reduce using rule 6 (declaration)


state 13

   22 func_header: VOID ID . @4 LBRKT formal_params RBRKT

    $default  reduce using rule 21 (@4)

    @4  go to state 24


state 14

    7 var_declaration: CONST type_specifier . var_decl_list SEMICOLON

    ID  shift, and go to state 25

    var_decl_list  go to state 26
    var_decl       go to state 20


state 15

    0 $accept: program $end .

    $default  accept


state 16

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 17

    8 var_declaration: type_specifier CONST . var_decl_list SEMICOLON

    ID  shift, and go to state 25

    var_decl_list  go to state 27
    var_decl       go to state 20


state 18

   14 var_decl: ID .
   16         | ID . @1 ASSIGN expression
   18         | ID . @2 LSQRBRKT expression RSQRBRKT
   20 func_header: type_specifier ID . @3 LBRKT formal_params RBRKT

    LBRKT     reduce using rule 19 (@3)
    LSQRBRKT  reduce using rule 17 (@2)
    ASSIGN    reduce using rule 15 (@1)
    $default  reduce using rule 14 (var_decl)

    @1  go to state 28
    @2  go to state 29
    @3  go to state 30


state 19

    9 var_declaration: type_specifier var_decl_list . SEMICOLON
   12 var_decl_list: var_decl_list . COMMA var_decl

    SEMICOLON  shift, and go to state 31
    COMMA      shift, and go to state 32


state 20

   13 var_decl_list: var_decl .

    $default  reduce using rule 13 (var_decl_list)


state 21

   24 func_prototype: func_header SEMICOLON .

    $default  reduce using rule 24 (func_prototype)


state 22

   32 compound_statement: LCLYBRKT . local_declarations statement_list RCLYBRKT

    $default  reduce using rule 34 (local_declarations)

    local_declarations  go to state 33


state 23

   23 func_declaration: func_header compound_statement .

    $default  reduce using rule 23 (func_declaration)


state 24

   22 func_header: VOID ID @4 . LBRKT formal_params RBRKT

    LBRKT  shift, and go to state 34


state 25

   14 var_decl: ID .
   16         | ID . @1 ASSIGN expression
   18         | ID . @2 LSQRBRKT expression RSQRBRKT

    LSQRBRKT  reduce using rule 17 (@2)
    ASSIGN    reduce using rule 15 (@1)
    $default  reduce using rule 14 (var_decl)

    @1  go to state 28
    @2  go to state 29


state 26

    7 var_declaration: CONST type_specifier var_decl_list . SEMICOLON
   12 var_decl_list: var_decl_list . COMMA var_decl

    SEMICOLON  shift, and go to state 35
    COMMA      shift, and go to state 32


state 27

    8 var_declaration: type_specifier CONST var_decl_list . SEMICOLON
   12 var_decl_list: var_decl_list . COMMA var_decl

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 32


state 28

   16 var_decl: ID @1 . ASSIGN expression

    ASSIGN  shift, and go to state 37


state 29

   18 var_decl: ID @2 . LSQRBRKT expression RSQRBRKT

    LSQRBRKT  shift, and go to state 38


state 30

   20 func_header: type_specifier ID @3 . LBRKT formal_params RBRKT

    LBRKT  shift, and go to state 39


state 31

    9 var_declaration: type_specifier var_decl_list SEMICOLON .

    $default  reduce using rule 9 (var_declaration)


state 32

   12 var_decl_list: var_decl_list COMMA . var_decl

    ID  shift, and go to state 25

    var_decl  go to state 40


state 33

   32 compound_statement: LCLYBRKT local_declarations . statement_list RCLYBRKT
   33 local_declarations: local_declarations . var_declaration

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3
    CONST   shift, and go to state 4

    $default  reduce using rule 36 (statement_list)

    var_declaration  go to state 41
    type_specifier   go to state 42
    statement_list   go to state 43


state 34

   22 func_header: VOID ID @4 LBRKT . formal_params RBRKT

    INT     shift, and go to state 1
    VOID    shift, and go to state 44
    DOUBLE  shift, and go to state 3

    $default  reduce using rule 27 (formal_params)

    type_specifier  go to state 45
    formal_params   go to state 46
    formal_list     go to state 47
    formal_param    go to state 48


state 35

    7 var_declaration: CONST type_specifier var_decl_list SEMICOLON .

    $default  reduce using rule 7 (var_declaration)


state 36

    8 var_declaration: type_specifier CONST var_decl_list SEMICOLON .

    $default  reduce using rule 8 (var_declaration)


state 37

   16 var_decl: ID @1 ASSIGN . expression

    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    expression         go to state 58
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 38

   18 var_decl: ID @2 LSQRBRKT . expression RSQRBRKT

    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    expression         go to state 63
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 39

   20 func_header: type_specifier ID @3 LBRKT . formal_params RBRKT

    INT     shift, and go to state 1
    VOID    shift, and go to state 44
    DOUBLE  shift, and go to state 3

    $default  reduce using rule 27 (formal_params)

    type_specifier  go to state 45
    formal_params   go to state 64
    formal_list     go to state 47
    formal_param    go to state 48


state 40

   12 var_decl_list: var_decl_list COMMA var_decl .

    $default  reduce using rule 12 (var_decl_list)


state 41

   33 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 33 (local_declarations)


state 42

    8 var_declaration: type_specifier . CONST var_decl_list SEMICOLON
    9                | type_specifier . var_decl_list SEMICOLON

    CONST  shift, and go to state 17
    ID     shift, and go to state 25

    var_decl_list  go to state 19
    var_decl       go to state 20


state 43

   32 compound_statement: LCLYBRKT local_declarations statement_list . RCLYBRKT
   35 statement_list: statement_list . statement

    IF         shift, and go to state 65
    RETURN     shift, and go to state 66
    WHILE      shift, and go to state 67
    FOR        shift, and go to state 68
    DO         shift, and go to state 69
    BREAK      shift, and go to state 70
    CONTINUE   shift, and go to state 71
    SWITCH     shift, and go to state 72
    DEFAULT    shift, and go to state 73
    CASE       shift, and go to state 74
    READ       shift, and go to state 75
    PRINT      shift, and go to state 76
    SEMICOLON  shift, and go to state 77
    LBRKT      shift, and go to state 49
    LCLYBRKT   shift, and go to state 22
    RCLYBRKT   shift, and go to state 78
    INC        shift, and go to state 50
    DEC        shift, and go to state 51
    ID         shift, and go to state 52
    NUM        shift, and go to state 53
    FNUM       shift, and go to state 54
    MINUS      shift, and go to state 55
    SIZEOF     shift, and go to state 56
    NOT        shift, and go to state 57

    compound_statement    go to state 79
    statement             go to state 80
    expression_statement  go to state 81
    if_statement          go to state 82
    while_statement       go to state 83
    do_while_statement    go to state 84
    for_statement         go to state 85
    return_statement      go to state 86
    read_statement        go to state 87
    print_statement       go to state 88
    expression            go to state 89
    var                   go to state 59
    r_value               go to state 60
    call                  go to state 61
    break_statement       go to state 90
    continue_statement    go to state 91
    case_statement        go to state 92
    default_statement     go to state 93
    switch_statement      go to state 94
    sizeof_expression     go to state 62


state 44

   26 formal_params: VOID .

    $default  reduce using rule 26 (formal_params)


state 45

   30 formal_param: type_specifier . ID
   31             | type_specifier . ID LSQRBRKT RSQRBRKT

    ID  shift, and go to state 95


state 46

   22 func_header: VOID ID @4 LBRKT formal_params . RBRKT

    RBRKT  shift, and go to state 96


state 47

   25 formal_params: formal_list .
   28 formal_list: formal_list . COMMA formal_param

    COMMA  shift, and go to state 97

    $default  reduce using rule 25 (formal_params)


state 48

   29 formal_list: formal_param .

    $default  reduce using rule 29 (formal_list)


state 49

   91 r_value: LBRKT . expression RBRKT

    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    expression         go to state 98
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 50

   87 r_value: INC . var

    ID  shift, and go to state 99

    var  go to state 100


state 51

   88 r_value: DEC . var

    ID  shift, and go to state 99

    var  go to state 101


state 52

   68 var: ID .
   70    | ID . @5 LSQRBRKT expression RSQRBRKT
   97 call: ID . @6 LBRKT args RBRKT

    LBRKT     reduce using rule 96 (@6)
    LSQRBRKT  reduce using rule 69 (@5)
    $default  reduce using rule 68 (var)

    @5  go to state 102
    @6  go to state 103


state 53

   93 r_value: NUM .

    $default  reduce using rule 93 (r_value)


state 54

   94 r_value: FNUM .

    $default  reduce using rule 94 (r_value)


state 55

   85 r_value: MINUS . expression

    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    expression         go to state 104
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 56

  107 sizeof_expression: SIZEOF . LBRKT type_specifier RBRKT
  108                  | SIZEOF . LBRKT expression RBRKT

    LBRKT  shift, and go to state 105


state 57

   84 r_value: NOT . expression

    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    expression         go to state 106
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 58

   16 var_decl: ID @1 ASSIGN expression .
   71 r_value: expression . PLUS expression
   72        | expression . MINUS expression
   73        | expression . STAR expression
   74        | expression . DIV expression
   75        | expression . MOD expression
   76        | expression . LESS expression
   77        | expression . LESSEQ expression
   78        | expression . GRTER expression
   79        | expression . GRTEREQ expression
   80        | expression . EQ expression
   81        | expression . NEQ expression
   82        | expression . AND expression
   83        | expression . OR expression

    OR       shift, and go to state 107
    AND      shift, and go to state 108
    NEQ      shift, and go to state 109
    EQ       shift, and go to state 110
    GRTEREQ  shift, and go to state 111
    GRTER    shift, and go to state 112
    LESSEQ   shift, and go to state 113
    LESS     shift, and go to state 114
    MINUS    shift, and go to state 115
    PLUS     shift, and go to state 116
    MOD      shift, and go to state 117
    DIV      shift, and go to state 118
    STAR     shift, and go to state 119

    $default  reduce using rule 16 (var_decl)


state 59

   66 expression: var . ASSIGN expression
   86 r_value: var .
   89        | var . INC
   90        | var . DEC

    INC     shift, and go to state 120
    DEC     shift, and go to state 121
    ASSIGN  shift, and go to state 122

    $default  reduce using rule 86 (r_value)


state 60

   67 expression: r_value .

    $default  reduce using rule 67 (expression)


state 61

   92 r_value: call .

    $default  reduce using rule 92 (r_value)


state 62

   95 r_value: sizeof_expression .

    $default  reduce using rule 95 (r_value)


state 63

   18 var_decl: ID @2 LSQRBRKT expression . RSQRBRKT
   71 r_value: expression . PLUS expression
   72        | expression . MINUS expression
   73        | expression . STAR expression
   74        | expression . DIV expression
   75        | expression . MOD expression
   76        | expression . LESS expression
   77        | expression . LESSEQ expression
   78        | expression . GRTER expression
   79        | expression . GRTEREQ expression
   80        | expression . EQ expression
   81        | expression . NEQ expression
   82        | expression . AND expression
   83        | expression . OR expression

    RSQRBRKT  shift, and go to state 123
    OR        shift, and go to state 107
    AND       shift, and go to state 108
    NEQ       shift, and go to state 109
    EQ        shift, and go to state 110
    GRTEREQ   shift, and go to state 111
    GRTER     shift, and go to state 112
    LESSEQ    shift, and go to state 113
    LESS      shift, and go to state 114
    MINUS     shift, and go to state 115
    PLUS      shift, and go to state 116
    MOD       shift, and go to state 117
    DIV       shift, and go to state 118
    STAR      shift, and go to state 119


state 64

   20 func_header: type_specifier ID @3 LBRKT formal_params . RBRKT

    RBRKT  shift, and go to state 124


state 65

   53 if_statement: IF . LBRKT expression RBRKT statement
   54             | IF . LBRKT expression RBRKT statement ELSE statement

    LBRKT  shift, and go to state 125


state 66

   61 return_statement: RETURN . SEMICOLON
   62                 | RETURN . expression SEMICOLON

    SEMICOLON  shift, and go to state 126
    LBRKT      shift, and go to state 49
    INC        shift, and go to state 50
    DEC        shift, and go to state 51
    ID         shift, and go to state 52
    NUM        shift, and go to state 53
    FNUM       shift, and go to state 54
    MINUS      shift, and go to state 55
    SIZEOF     shift, and go to state 56
    NOT        shift, and go to state 57

    expression         go to state 127
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 67

   55 while_statement: WHILE . LBRKT expression RBRKT statement

    LBRKT  shift, and go to state 128


state 68

   57 for_statement: FOR . for_header statement

    LBRKT  shift, and go to state 129

    for_header  go to state 130


state 69

   56 do_while_statement: DO . statement WHILE LBRKT expression RBRKT SEMICOLON

    IF         shift, and go to state 65
    RETURN     shift, and go to state 66
    WHILE      shift, and go to state 67
    FOR        shift, and go to state 68
    DO         shift, and go to state 69
    BREAK      shift, and go to state 70
    CONTINUE   shift, and go to state 71
    SWITCH     shift, and go to state 72
    DEFAULT    shift, and go to state 73
    CASE       shift, and go to state 74
    READ       shift, and go to state 75
    PRINT      shift, and go to state 76
    SEMICOLON  shift, and go to state 77
    LBRKT      shift, and go to state 49
    LCLYBRKT   shift, and go to state 22
    INC        shift, and go to state 50
    DEC        shift, and go to state 51
    ID         shift, and go to state 52
    NUM        shift, and go to state 53
    FNUM       shift, and go to state 54
    MINUS      shift, and go to state 55
    SIZEOF     shift, and go to state 56
    NOT        shift, and go to state 57

    compound_statement    go to state 79
    statement             go to state 131
    expression_statement  go to state 81
    if_statement          go to state 82
    while_statement       go to state 83
    do_while_statement    go to state 84
    for_statement         go to state 85
    return_statement      go to state 86
    read_statement        go to state 87
    print_statement       go to state 88
    expression            go to state 89
    var                   go to state 59
    r_value               go to state 60
    call                  go to state 61
    break_statement       go to state 90
    continue_statement    go to state 91
    case_statement        go to state 92
    default_statement     go to state 93
    switch_statement      go to state 94
    sizeof_expression     go to state 62


state 70

  102 break_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 132


state 71

  103 continue_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 133


state 72

  106 switch_statement: SWITCH . LBRKT expression RBRKT statement

    LBRKT  shift, and go to state 134


state 73

  105 default_statement: DEFAULT . COLON statement

    COLON  shift, and go to state 135


state 74

  104 case_statement: CASE . NUM COLON statement

    NUM  shift, and go to state 136


state 75

   63 read_statement: READ . var SEMICOLON

    ID  shift, and go to state 99

    var  go to state 137


state 76

   64 print_statement: PRINT . expression SEMICOLON
   65                | PRINT . STRING SEMICOLON

    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    STRING  shift, and go to state 138
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    expression         go to state 139
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 77

   52 expression_statement: SEMICOLON .

    $default  reduce using rule 52 (expression_statement)


state 78

   32 compound_statement: LCLYBRKT local_declarations statement_list RCLYBRKT .

    $default  reduce using rule 32 (compound_statement)


state 79

   38 statement: compound_statement .

    $default  reduce using rule 38 (statement)


state 80

   35 statement_list: statement_list statement .

    $default  reduce using rule 35 (statement_list)


state 81

   37 statement: expression_statement .

    $default  reduce using rule 37 (statement)


state 82

   39 statement: if_statement .

    $default  reduce using rule 39 (statement)


state 83

   40 statement: while_statement .

    $default  reduce using rule 40 (statement)


state 84

   41 statement: do_while_statement .

    $default  reduce using rule 41 (statement)


state 85

   42 statement: for_statement .

    $default  reduce using rule 42 (statement)


state 86

   43 statement: return_statement .

    $default  reduce using rule 43 (statement)


state 87

   44 statement: read_statement .

    $default  reduce using rule 44 (statement)


state 88

   45 statement: print_statement .

    $default  reduce using rule 45 (statement)


state 89

   51 expression_statement: expression . SEMICOLON
   71 r_value: expression . PLUS expression
   72        | expression . MINUS expression
   73        | expression . STAR expression
   74        | expression . DIV expression
   75        | expression . MOD expression
   76        | expression . LESS expression
   77        | expression . LESSEQ expression
   78        | expression . GRTER expression
   79        | expression . GRTEREQ expression
   80        | expression . EQ expression
   81        | expression . NEQ expression
   82        | expression . AND expression
   83        | expression . OR expression

    SEMICOLON  shift, and go to state 140
    OR         shift, and go to state 107
    AND        shift, and go to state 108
    NEQ        shift, and go to state 109
    EQ         shift, and go to state 110
    GRTEREQ    shift, and go to state 111
    GRTER      shift, and go to state 112
    LESSEQ     shift, and go to state 113
    LESS       shift, and go to state 114
    MINUS      shift, and go to state 115
    PLUS       shift, and go to state 116
    MOD        shift, and go to state 117
    DIV        shift, and go to state 118
    STAR       shift, and go to state 119


state 90

   46 statement: break_statement .

    $default  reduce using rule 46 (statement)


state 91

   47 statement: continue_statement .

    $default  reduce using rule 47 (statement)


state 92

   49 statement: case_statement .

    $default  reduce using rule 49 (statement)


state 93

   50 statement: default_statement .

    $default  reduce using rule 50 (statement)


state 94

   48 statement: switch_statement .

    $default  reduce using rule 48 (statement)


state 95

   30 formal_param: type_specifier ID .
   31             | type_specifier ID . LSQRBRKT RSQRBRKT

    LSQRBRKT  shift, and go to state 141

    $default  reduce using rule 30 (formal_param)


state 96

   22 func_header: VOID ID @4 LBRKT formal_params RBRKT .

    $default  reduce using rule 22 (func_header)


state 97

   28 formal_list: formal_list COMMA . formal_param

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3

    type_specifier  go to state 45
    formal_param    go to state 142


state 98

   71 r_value: expression . PLUS expression
   72        | expression . MINUS expression
   73        | expression . STAR expression
   74        | expression . DIV expression
   75        | expression . MOD expression
   76        | expression . LESS expression
   77        | expression . LESSEQ expression
   78        | expression . GRTER expression
   79        | expression . GRTEREQ expression
   80        | expression . EQ expression
   81        | expression . NEQ expression
   82        | expression . AND expression
   83        | expression . OR expression
   91        | LBRKT expression . RBRKT

    RBRKT    shift, and go to state 143
    OR       shift, and go to state 107
    AND      shift, and go to state 108
    NEQ      shift, and go to state 109
    EQ       shift, and go to state 110
    GRTEREQ  shift, and go to state 111
    GRTER    shift, and go to state 112
    LESSEQ   shift, and go to state 113
    LESS     shift, and go to state 114
    MINUS    shift, and go to state 115
    PLUS     shift, and go to state 116
    MOD      shift, and go to state 117
    DIV      shift, and go to state 118
    STAR     shift, and go to state 119


state 99

   68 var: ID .
   70    | ID . @5 LSQRBRKT expression RSQRBRKT

    LSQRBRKT  reduce using rule 69 (@5)
    $default  reduce using rule 68 (var)

    @5  go to state 102


state 100

   87 r_value: INC var .

    $default  reduce using rule 87 (r_value)


state 101

   88 r_value: DEC var .

    $default  reduce using rule 88 (r_value)


state 102

   70 var: ID @5 . LSQRBRKT expression RSQRBRKT

    LSQRBRKT  shift, and go to state 144


state 103

   97 call: ID @6 . LBRKT args RBRKT

    LBRKT  shift, and go to state 145


state 104

   71 r_value: expression . PLUS expression
   72        | expression . MINUS expression
   73        | expression . STAR expression
   74        | expression . DIV expression
   75        | expression . MOD expression
   76        | expression . LESS expression
   77        | expression . LESSEQ expression
   78        | expression . GRTER expression
   79        | expression . GRTEREQ expression
   80        | expression . EQ expression
   81        | expression . NEQ expression
   82        | expression . AND expression
   83        | expression . OR expression
   85        | MINUS expression .

    $default  reduce using rule 85 (r_value)


state 105

  107 sizeof_expression: SIZEOF LBRKT . type_specifier RBRKT
  108                  | SIZEOF LBRKT . expression RBRKT

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3
    LBRKT   shift, and go to state 49
    INC     shift, and go to state 50
    DEC     shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    FNUM    shift, and go to state 54
    MINUS   shift, and go to state 55
    SIZEOF  shift, and go to state 56
    NOT     shift, and go to state 57

    type_specifier     go to state 146
    expression         go to state 147
    var                go to state 59
    r_value            go to state 60
    call               go to state 61
    sizeof_expression  go to state 62


state 106
